# Black-Spyder

./: .gitignore  AGENTS.md  Makefile  README.ko.md  README.md  pyproject.toml
agents/: auth-analyzer.md  evidence-writer.ko.md  evidence-writer.md  mobile-app-analyzer.ko.md  mobile-app-analyzer.md  mobile-decompiler.md  mobile-dynamic-verifier.md  recon-reader.ko.md  recon-reader.md  sec-orchestrator.ko.md  sec-orchestrator.md
artifacts/mobile_app_extracted/: sample_mobile_strings.txt
commands/: agents.md  analyze.md  compare-auth.md  converse.md  doctor.md  mobile-decompile.md  mobile-review.md  mobile-verify.md  next-step.md  observe-safe.md  recon.md  session-resume.md  session-search.md  session-show.md  sessions.md  write-finding.md
mcp/: apk_decompile.py  artifact_writer.py  common.py  http_probe.py  mobile_dynamic_verify.py  response_diff.py  schema_extract.py  scope_guard.py  yara_scan.py
policies/: scope.yaml
rules/: mobile_controls.yar
sec-agent/: AGENTS.md  README.ko.md  README.md  pyproject.toml  requirements.txt
sec-agent/agents/: auth-analyzer.ko.md  evidence-writer.md  recon-reader.md  sec-orchestrator.md
sec-agent/mcp/: scope_guard.py
state/: state.json
tests/: test_conversation_flow.py  test_mobile_workflows.py  test_opencode_bridge.py  test_session1_index.py  test_session2_dispatcher.py  test_session3_sessions.py  test_session4_bootstrap.py  test_simple_entry.py
tools/: agent_cli.py  agent_runtime.py  bootstrap.py  dry_run.py  ecosystem.py  opencode_bridge.py  orchestrate_candidates.py  simple_entry.py
(+5 files in other folders)
