[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Black-Spyder"
version = "0.1.0"
description = "Controlled, evidence-driven security assessment assistant for authorized targets only"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "pyyaml",
  "rich",
  "typer",
  "pydantic",
  "fastapi",
  "uvicorn",
  "python-multipart",
]

[project.scripts]
black-spyder-bootstrap = "tools.bootstrap:main"
black-spyder-agent = "tools.agent_cli:main"
black-spyder-opencode-bridge = "tools.opencode_bridge:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "mcp*"]
namespaces = true
